--- a/settings.ini
+++ b/settings.ini
@@ -1,16 +1,16 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = Enercast API
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
+user = chandana34
+description = A python package to use Enercast API
+keywords = APIdatapull enercast weatherdata powerdata dayahead_data 
+author = Chandana Nivarthi
+author_email = chandanapriya.nivarthi@gmail.com
 # copyright = Put your copyright information here
 branch = {branch}
 version = 0.0.1
