--- a/settings.ini
+++ b/settings.ini
@@ -11,7 +11,7 @@ description = A python package to use Enercast API
 keywords = APIdatapull enercast weatherdata powerdata dayahead_data 
 author = Chandana Nivarthi
 author_email = chandanapriya.nivarthi@gmail.com
-# copyright = Put your copyright information here
+copyright = uni kassel
 branch = {branch}
 version = 0.0.1
 min_python = 3.6
