--- a/settings.ini
+++ b/settings.ini
@@ -23,6 +23,8 @@ custom_sidebar = False
 license = apache2
 # From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
 status = 2
+copyright = openthings
+description = test
 
 # Optional. Same format as setuptools requirements
 # requirements = 
